Sun May 13 01:13:46 2001  George Lebl <jirka@5z.com>

	* session.c: when reading the main menu flags use the default flags
	  function so that we also get the distribution menu if available

Sat May 12 19:22:39 2001  George Lebl <jirka@5z.com>

	* aligned-widget.c, basep-widget.[ch], sliding-widget.c,
	  multiscree-stuff.[ch], edge-widget.c, border-widget.c,
	  floating-widget.c, menu.c, menu-util.c, panel.c, drawer-widget.c:
	  Further multiscreenization, floating and drawer correctly
	  multiscreenized and dragging of panels between screens working,
	  menus fixed for clamping on offset screens

	* foobar-widget.c: warning fix

	* menu.c: Add tooltips to some items

Fri May 11 18:20:39 2001  George Lebl <jirka@5z.com>

	* edge-widget.c, sliding-widget.c, multiscreen-stuff.h: multiscreened
	  edge and sliding widget moving.  However only tested for single
	  screen case which which works unchanged.

Tue May 08 15:39:54 2001  George Lebl <jirka@5z.com>

	* foobar-widget.[ch]:  When the separator is on the end of the task menu
	  kill it.  When a window loses focus or is killed wipe the icon in
	  tasklist corner thing.

Tue May 08 12:41:41 2001  George Lebl <jirka@5z.com>

	* extern.c, foobar-widget.c, gnome-panel-properties.c, launcher.c,
	  logout.c, menu-rh.c, menu.c, panel-util.c, panel.c:  Increase
	  the paranoia level when dealing with strings.  Add an assload of
	  checks for NULLs some preconditions asserts and warnings, possibly
	  fixing some cornercase crashes.

	* foobar-widget.c: Fix the "clicked on foobar tasklist and things
	  crashed" bug

	* menu-fentry.c:  Fix the crashes on startup bug (the /tmp/languages
	  bug).  I should be publically flogged for this one.

Tue May 08 01:45:32 2001  George Lebl <jirka@5z.com>

	* launcher.c: some cleanup, and be paranoid about dentry we get
	  from dentry edit and rather hoard it

	* menu.c: We were forgetting to hoard launchers when adding from
	  the launcher adding menu.  DUH!  Fixes #53626
