@@ -1,3 +1,9 @@
+Sun May 13 02:45:01 2001  Chema Celorio  <chema@celorio.com>
+
+	* foobar-widget.c (append_clock_menu): look for time-admin, if it is
+	in path, add a menu item for "Set Time".
+	(set_time_cb): implement
+
 Sun May 13 01:13:46 2001  George Lebl <jirka@5z.com>
 
 	* session.c: when reading the main menu flags use the default flags
